--- a/AI_Capstone_project_2277.ipynb
+++ b/AI_Capstone_project_2277.ipynb
@@ -5,9 +5,7 @@
    "id": "c66adc76",
    "metadata": {},
    "source": [
-    "A Project to create a model that predicts movie performance through the use of metadata and early audience reviews. Can we predict whether a movie will be a box office hit or a flop based on its metadata (genre, budget, cast, release date) and early audience reviews?
-Features : genre, Budget, cast, release date. We can add more (name of a famous actor, time frame of the film)
-"
+    "A Project to create a model that predicts movie performance through the use of metadata and early audience reviews"
    ]
   },
   {
