--- a/AI_Capstone_project_2277.ipynb
+++ b/AI_Capstone_project_2277.ipynb
@@ -5,7 +5,7 @@
    "id": "c66adc76",
    "metadata": {},
    "source": [
-    "A Project to create a model that predicts movie performance through the use of metadata and early audience reviews"
+    "A Project to create a model that measures movie performance by predicting the average audience rating for each movie on a scale of (1-10) "
    ]
   },
   {
