--- a/AI_Capstone_project_2277.ipynb
+++ b/AI_Capstone_project_2277.ipynb
@@ -5,17 +5,260 @@
    "id": "c66adc76",
    "metadata": {},
    "source": [
-    "A Project to create a model that measures movie performance by predicting the average audience rating for each movie on a scale of (1-10) "
+    "**A Project to create a model that predicts movie performance through the use of metadata and early audience reviews**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "08b07598",
+   "metadata": {},
+   "source": [
+    "**Step one: We Load and inspect the data**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "1c44cd31",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(45466, 24)\n",
+      "Index(['adult', 'belongs_to_collection', 'budget', 'genres', 'homepage', 'id',\n",
+      "       'imdb_id', 'original_language', 'original_title', 'overview',\n",
+      "       'popularity', 'poster_path', 'production_companies',\n",
+      "       'production_countries', 'release_date', 'revenue', 'runtime',\n",
+      "       'spoken_languages', 'status', 'tagline', 'title', 'video',\n",
+      "       'vote_average', 'vote_count'],\n",
+      "      dtype='object')\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>adult</th>\n",
+       "      <th>belongs_to_collection</th>\n",
+       "      <th>budget</th>\n",
+       "      <th>genres</th>\n",
+       "      <th>homepage</th>\n",
+       "      <th>id</th>\n",
+       "      <th>imdb_id</th>\n",
+       "      <th>original_language</th>\n",
+       "      <th>original_title</th>\n",
+       "      <th>overview</th>\n",
+       "      <th>...</th>\n",
+       "      <th>release_date</th>\n",
+       "      <th>revenue</th>\n",
+       "      <th>runtime</th>\n",
+       "      <th>spoken_languages</th>\n",
+       "      <th>status</th>\n",
+       "      <th>tagline</th>\n",
+       "      <th>title</th>\n",
+       "      <th>video</th>\n",
+       "      <th>vote_average</th>\n",
+       "      <th>vote_count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>False</td>\n",
+       "      <td>{'id': 10194, 'name': 'Toy Story Collection', ...</td>\n",
+       "      <td>30000000</td>\n",
+       "      <td>[{'id': 16, 'name': 'Animation'}, {'id': 35, '...</td>\n",
+       "      <td>http://toystory.disney.com/toy-story</td>\n",
+       "      <td>862</td>\n",
+       "      <td>tt0114709</td>\n",
+       "      <td>en</td>\n",
+       "      <td>Toy Story</td>\n",
+       "      <td>Led by Woody, Andy's toys live happily in his ...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1995-10-30</td>\n",
+       "      <td>373554033.0</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>[{'iso_639_1': 'en', 'name': 'English'}]</td>\n",
+       "      <td>Released</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Toy Story</td>\n",
+       "      <td>False</td>\n",
+       "      <td>7.7</td>\n",
+       "      <td>5415.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>65000000</td>\n",
+       "      <td>[{'id': 12, 'name': 'Adventure'}, {'id': 14, '...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>8844</td>\n",
+       "      <td>tt0113497</td>\n",
+       "      <td>en</td>\n",
+       "      <td>Jumanji</td>\n",
+       "      <td>When siblings Judy and Peter discover an encha...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1995-12-15</td>\n",
+       "      <td>262797249.0</td>\n",
+       "      <td>104.0</td>\n",
+       "      <td>[{'iso_639_1': 'en', 'name': 'English'}, {'iso...</td>\n",
+       "      <td>Released</td>\n",
+       "      <td>Roll the dice and unleash the excitement!</td>\n",
+       "      <td>Jumanji</td>\n",
+       "      <td>False</td>\n",
+       "      <td>6.9</td>\n",
+       "      <td>2413.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>False</td>\n",
+       "      <td>{'id': 119050, 'name': 'Grumpy Old Men Collect...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[{'id': 10749, 'name': 'Romance'}, {'id': 35, ...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>15602</td>\n",
+       "      <td>tt0113228</td>\n",
+       "      <td>en</td>\n",
+       "      <td>Grumpier Old Men</td>\n",
+       "      <td>A family wedding reignites the ancient feud be...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1995-12-22</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>101.0</td>\n",
+       "      <td>[{'iso_639_1': 'en', 'name': 'English'}]</td>\n",
+       "      <td>Released</td>\n",
+       "      <td>Still Yelling. Still Fighting. Still Ready for...</td>\n",
+       "      <td>Grumpier Old Men</td>\n",
+       "      <td>False</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>92.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3 rows × 24 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   adult                              belongs_to_collection    budget  \\\n",
+       "0  False  {'id': 10194, 'name': 'Toy Story Collection', ...  30000000   \n",
+       "1  False                                                NaN  65000000   \n",
+       "2  False  {'id': 119050, 'name': 'Grumpy Old Men Collect...         0   \n",
+       "\n",
+       "                                              genres  \\\n",
+       "0  [{'id': 16, 'name': 'Animation'}, {'id': 35, '...   \n",
+       "1  [{'id': 12, 'name': 'Adventure'}, {'id': 14, '...   \n",
+       "2  [{'id': 10749, 'name': 'Romance'}, {'id': 35, ...   \n",
+       "\n",
+       "                               homepage     id    imdb_id original_language  \\\n",
+       "0  http://toystory.disney.com/toy-story    862  tt0114709                en   \n",
+       "1                                   NaN   8844  tt0113497                en   \n",
+       "2                                   NaN  15602  tt0113228                en   \n",
+       "\n",
+       "     original_title                                           overview  ...  \\\n",
+       "0         Toy Story  Led by Woody, Andy's toys live happily in his ...  ...   \n",
+       "1           Jumanji  When siblings Judy and Peter discover an encha...  ...   \n",
+       "2  Grumpier Old Men  A family wedding reignites the ancient feud be...  ...   \n",
+       "\n",
+       "  release_date      revenue runtime  \\\n",
+       "0   1995-10-30  373554033.0    81.0   \n",
+       "1   1995-12-15  262797249.0   104.0   \n",
+       "2   1995-12-22          0.0   101.0   \n",
+       "\n",
+       "                                    spoken_languages    status  \\\n",
+       "0           [{'iso_639_1': 'en', 'name': 'English'}]  Released   \n",
+       "1  [{'iso_639_1': 'en', 'name': 'English'}, {'iso...  Released   \n",
+       "2           [{'iso_639_1': 'en', 'name': 'English'}]  Released   \n",
+       "\n",
+       "                                             tagline             title  video  \\\n",
+       "0                                                NaN         Toy Story  False   \n",
+       "1          Roll the dice and unleash the excitement!           Jumanji  False   \n",
+       "2  Still Yelling. Still Fighting. Still Ready for...  Grumpier Old Men  False   \n",
+       "\n",
+       "  vote_average vote_count  \n",
+       "0          7.7     5415.0  \n",
+       "1          6.9     2413.0  \n",
+       "2          6.5       92.0  \n",
+       "\n",
+       "[3 rows x 24 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Step One"
+    "import pandas as pd\n",
+    "\n",
+    "# Load movies metadata (update the path to where you downloaded it)\n",
+    "df = pd.read_csv(\"C:\\\\Users\\\\madua\\Downloads\\\\movies_metadata.csv\", low_memory=False)\n",
+    "\n",
+    "# Quick peek\n",
+    "print(df.shape)\n",
+    "print(df.columns)\n",
+    "df.head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "935fb549",
+   "metadata": {},
+   "source": [
+    "**Step two: Basic cleaning and selecting features**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "128e8f49",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(5380, 7)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Keep only the columns we need\n",
+    "cols = ['budget', 'revenue', 'runtime', 'popularity', 'genres', 'release_date', 'vote_average']\n",
+    "df = df[cols]\n",
+    "\n",
+    "# Convert numeric columns\n",
+    "df['budget'] = pd.to_numeric(df['budget'], errors='coerce')\n",
+    "df['revenue'] = pd.to_numeric(df['revenue'], errors='coerce')\n",
+    "df['runtime'] = pd.to_numeric(df['runtime'], errors='coerce')\n",
+    "df['popularity'] = pd.to_numeric(df['popularity'], errors='coerce')\n",
+    "\n",
+    "# Drop rows with missing target or crucial features\n",
+    "df = df.dropna(subset=['vote_average', 'budget', 'revenue', 'runtime', 'popularity', 'release_date'])\n",
+    "\n",
+    "# Filter out zeros in budget or revenue (often missing or invalid)\n",
+    "df = df[(df['budget'] > 0) & (df['revenue'] > 0)]\n",
+    "\n",
+    "print(df.shape)\n"
    ]
   }
  ],
@@ -35,7 +278,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
