--- a/movies_performance_regression_explained.ipynb
+++ b/movies_performance_regression_explained.ipynb
@@ -2132,13 +2132,7 @@
    "metadata": {},
    "source": [
     "### Explanation\n",
-    "This cell trains the model for several epochs. During each epoch, it adjusts weights to minimize the loss and improve accuracy. The performance of the trained model on entirely new data is assessed in this part. We compute a number of crucial regression measures, including MSE, RMSE, MAE, and R2, after making predictions on the test set. These metrics aid in measuring the correctness of the model from several perspectives. A visual view is given by the scatter plot of Predicted vs. Actual. Every point would precisely fall on the red diagonal line if the forecasts were accurate. Rather, we observe a wide dispersion, indicating that although the model is able to identify broad patterns, it is not as accurate on several individual films. The table with the biggest mistakes aids in identifying incorrect predictions and provides insight into the situations that the model finds most challenging, which are frequently films with odd metadata or extreme ratings. MSE measures average squared error and heavily penalizes large mistakes.
-
-RMSE converts that error back into the original units, making interpretation easier.
-
-MAE shows the average absolute difference between predicted and actual ratings.
-
-R² reflects how much of the variation in movie ratings the model can explain."
+    "This cell trains the model for several epochs. During each epoch, it adjusts weights to minimize the loss and improve accuracy."
    ]
   },
   {
