--- a/movies_performance_regression_explained.ipynb
+++ b/movies_performance_regression_explained.ipynb
@@ -11,6 +11,7 @@
     "Melvis\n",
     "\n",
     "Franck Kolontchang.\n",
+    "Taylor Freeman.\n",
     "This notebook implements Weeks 7–10 of the project: loading the dataset, preprocessing,\n",
     "defining a PyTorch regression model, training, evaluation, refinement, and saving results.\n",
     "\n",
