--- a/movies_performance_regression_explained.ipynb
+++ b/movies_performance_regression_explained.ipynb
@@ -2203,8 +2203,18 @@
    "metadata": {},
    "source": [
     "### Explanation\n",
-    "After training, the model’s predictions are tested using evaluation metrics like MAE, MSE, RMSE, and R² to determine how well it performs."
-   ]
+   "Once the model completed training, we evaluated its performance using several industry-standard regression metrics. These metrics help us understand not just whether the model makes accurate predictions, but also *how* it makes mistakes.\n",
+"\n",
+"**• Mean Absolute Error (MAE):** Measures the average absolute difference between predicted and actual values. MAE is easy to interpret and tells us how far off the predictions are on average.\n",
+"\n",
+"**• Mean Squared Error (MSE):** Punishes larger errors more heavily. This helps reveal cases where the model makes a few very large mistakes.\n",
+"\n",
+"**• Root Mean Squared Error (RMSE):** The square root of MSE, providing error in the same units as the target variable. It is one of the most common ways to judge continuous models.\n",
+"\n",
+"**• R² Score (Coefficient of Determination):** Measures how much variance in the actual values the model can explain. An R² close to 1 indicates strong predictive power.\n",
+"\n",
+"To visualize performance, we also created a **Predicted vs. Actual scatter plot**, which allows us to see how closely the model’s outputs match true values. Ideally, points should fall along a diagonal line — the closer they cluster, the better the model is performing.\n"
+]
   },
   {
    "cell_type": "markdown",
