--- a/movies_performance_regression_explained.ipynb
+++ b/movies_performance_regression_explained.ipynb
@@ -2224,8 +2224,15 @@
    },
    "source": [
     "## Final Notes & Next Steps\n",
-    "- You can improve the model by adding feature-rich engineering (e.g., actor popularity, crew info, marketing spend proxies),\n"
-   ]
+    "The current model performs reasonably well for a baseline, but there are several opportunities for improvement and future experimentation.\n",
+  "\n",
+  "- **Feature Engineering:** Adding richer features—such as actor popularity trends, director success rates, genre embeddings, release-date timing, or marketing spend proxies—may significantly boost predictive power.\n",
+  "- **Model Architecture Tuning:** Experimenting with deeper networks, dropout, learning rate scheduling, or alternative optimizers may improve generalization.\n",
+  "- **Expanded Dataset:** Including more historical movies or additional metadata could help the model learn stronger patterns.\n",
+  "- **Hyperparameter Optimization:** Grid search or Bayesian optimization can systematically find better configurations.\n",
+  "\n",
+  "Overall, this model provides a strong foundation, and these next steps would help refine accuracy, reduce error, and strengthen the model’s robustness for real-world applications.\n"
+ ]
   }
  ],
  "metadata": {
